# serializer version: 1
# name: test_describe_dot_command[describe users html]
  '''
  <div class="solite-describe"><style>
    .solite-describe summary { cursor: pointer; font-weight: 600; }
    .solite-describe details { margin: 0.4em 0; }
    .solite-describe-header { margin-bottom: 0.5em; }
    .solite-describe-header code { font-weight: 600; }
    .solite-describe-header .kind,
    .solite-describe-header .flag,
    .solite-describe-header .count { margin-left: 0.6em; font-size: 0.85em; opacity: 0.75; }
    .solite-describe-footer { font-size: 0.85em; opacity: 0.7; margin-top: 0.25em; }
    .solite-describe table { border-collapse: collapse; margin: 0.3em 0; }
    .solite-describe td, .solite-describe th {
      padding: 2px 10px;
      text-align: left;
      border-bottom: 1px solid currentColor;
      border-color: color-mix(in srgb, currentColor 15%, transparent);
    }
    .solite-describe .badge {
      font-size: 0.75em;
      padding: 1px 6px;
      border-radius: 3px;
      border: 1px solid currentColor;
      opacity: 0.8;
    }
  </style><div class="solite-describe-header"><code>main.users</code><span class="kind">table</span><span class="count">3 rows</span></div><details open="open"><summary>Data</summary><div style="overflow-x:auto"><div class="solite-output" style="--jt-key: #89B4FA; --jt-str: #A6E3A1; --jt-num: #FAB387; --jt-bool: #EBA0AC; --jt-null: #BAC2DE; --jt-footer: #A6ADC8; --jt-text: #CDD6F4; --jt-border: #6C7086; --jt-bg: #CDD6F4;">
  <style>
  .solite-table {
      border-collapse: collapse;
      font-family: monospace;
      font-size: 14px;
  }
  .solite-table th, .solite-table td {
      border: 1px solid #6c7086;
      padding: 4px 8px;
      text-align: left;
  }
  .solite-table th {
      background-color: #313244;
      color: #cdd6f4;
      font-weight: bold;
  }
  .solite-table tr:nth-child(even) {
      background-color: #1e1e2e;
  }
  .solite-table tr:nth-child(odd) {
      background-color: #181825;
  }
  .solite-table .ellipsis-row {
      background-color: #45475a;
      text-align: center;
      color: #a6adc8;
      font-style: italic;
  }
  .solite-table .ellipsis-col {
      background-color: #45475a;
      text-align: center;
      color: #a6adc8;
  }
  .solite-footer {
      color: #a6adc8;
      font-size: 12px;
      margin-top: 4px;
  }
  .solite-json-tree {
      font-family: monospace;
      font-size: 13px;
      line-height: 1.4;
  }
  .solite-json-tree .jt-row {
      white-space: nowrap;
  }
  .solite-json-tree .jt-inline {
      display: inline-block;
      max-width: 200px;
      overflow: hidden;
      text-overflow: ellipsis;
      vertical-align: middle;
      white-space: nowrap;
  }
  .solite-json-tree .jt-caret {
      cursor: pointer;
      user-select: none;
      display: inline-block;
      width: 1em;
      text-align: center;
      color: var(--jt-footer);
  }
  .solite-json-tree .jt-caret:hover {
      color: var(--jt-text);
  }
  .solite-json-tree .jt-key {
      color: var(--jt-key);
  }
  .solite-json-tree .jt-str {
      color: var(--jt-str);
  }
  .solite-json-tree .jt-num {
      color: var(--jt-num);
  }
  .solite-json-tree .jt-bool {
      color: var(--jt-bool);
  }
  .solite-json-tree .jt-null {
      color: var(--jt-null);
      font-style: italic;
  }
  .solite-json-tree .jt-bracket {
      color: var(--jt-footer);
  }
  .solite-json-tree .jt-preview {
      color: var(--jt-footer);
  }
  .solite-json-tree .jt-indent {
      display: inline-block;
      width: 1.5em;
  }
  .solite-json-tree .jt-more {
      color: var(--jt-footer);
      cursor: pointer;
      font-style: italic;
  }
  .solite-json-tree .jt-more:hover {
      text-decoration: underline;
      color: var(--jt-text);
  }
  .solite-json-cell {
      position: relative;
      display: inline-block;
  }
  .solite-json-cell .jt-copy {
      position: absolute;
      top: 0;
      right: 0;
      background: var(--jt-bg);
      border: 1px solid var(--jt-border);
      border-radius: 3px;
      color: var(--jt-footer);
      font-size: 11px;
      padding: 1px 5px;
      cursor: pointer;
      opacity: 0;
      transition: opacity 0.15s;
      font-family: monospace;
      z-index: 1;
  }
  .solite-json-cell:hover .jt-copy {
      opacity: 1;
  }
  .solite-json-cell .jt-copy:hover {
      color: var(--jt-text);
      border-color: var(--jt-footer);
  }
  </style>
  <table class="solite-table">
  <thead><tr><th>id</th><th>name</th></tr></thead>
  <tbody>
  <tr><td style="text-align: right;"><span style="color: #FAB387; font-family: monospace;">1</span></td><td style="text-align: left;">a</td></tr>
  <tr><td style="text-align: right;"><span style="color: #FAB387; font-family: monospace;">2</span></td><td style="text-align: left;">b</td></tr>
  <tr><td style="text-align: right;"><span style="color: #FAB387; font-family: monospace;">3</span></td><td style="text-align: left;">c</td></tr>
  </tbody>
  </table>
  <script>(function() {
      var container = document.currentScript.parentElement;
      var cells = container.querySelectorAll('.solite-json-cell');
      var PREVIEW_KEYS = 5;
      var PAGE_SIZE = 20;
      var MAX_STR = 120;
      var STORAGE_PREFIX = 'solite-json-';
  
      function loadExpanded(key) {
          try {
              var v = sessionStorage.getItem(STORAGE_PREFIX + key);
              return v ? JSON.parse(v) : {};
          } catch(e) { return {}; }
      }
  
      function saveExpanded(key, expanded) {
          try {
              sessionStorage.setItem(STORAGE_PREFIX + key, JSON.stringify(expanded));
          } catch(e) {}
      }
  
      function esc(s) {
          return s.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;');
      }
  
      function truncStr(s) {
          return s.length > MAX_STR ? s.slice(0, MAX_STR - 1) + '\u2026' : s;
      }
  
      function preview(val) {
          if (val === null) return '<span class="jt-null">null</span>';
          if (typeof val === 'boolean') return '<span class="jt-bool">' + val + '</span>';
          if (typeof val === 'number') return '<span class="jt-num">' + val + '</span>';
          if (typeof val === 'string') {
              var s = val.length > 40 ? val.slice(0,37) + '\u2026' : val;
              return '<span class="jt-str">"' + esc(s) + '"</span>';
          }
          if (Array.isArray(val)) return '<span class="jt-bracket">Array(' + val.length + ')</span>';
          return '<span class="jt-bracket">Object{\u2026}</span>';
      }
  
      function inlinePreview(val) {
          if (Array.isArray(val)) {
              var parts = [];
              for (var i = 0; i < Math.min(val.length, PREVIEW_KEYS); i++) parts.push(preview(val[i]));
              var s = parts.join(', ');
              if (val.length > PREVIEW_KEYS) s += ', \u2026';
              return '<span class="jt-bracket">[</span>' + s + '<span class="jt-bracket">]</span>';
          }
          if (val && typeof val === 'object') {
              var keys = Object.keys(val);
              var parts = [];
              for (var i = 0; i < Math.min(keys.length, PREVIEW_KEYS); i++) {
                  parts.push('<span class="jt-key">' + esc(keys[i]) + '</span>: ' + preview(val[keys[i]]));
              }
              var s = parts.join(', ');
              if (keys.length > PREVIEW_KEYS) s += ', \u2026';
              return '<span class="jt-bracket">{</span>' + s + '<span class="jt-bracket">}</span>';
          }
          return preview(val);
      }
  
      function renderValue(val, depth, path, state) {
          if (val === null) return '<span class="jt-null">null</span>';
          if (typeof val === 'boolean') return '<span class="jt-bool">' + val + '</span>';
          if (typeof val === 'number') return '<span class="jt-num">' + val + '</span>';
          if (typeof val === 'string') return '<span class="jt-str">"' + esc(truncStr(val)) + '"</span>';
          return buildCollapsible(val, depth, path, state);
      }
  
      function indent(depth) {
          var s = '';
          for (var i = 0; i < depth; i++) s += '<span class="jt-indent"></span>';
          return s;
      }
  
      function buildCollapsible(val, depth, path, state) {
          var isArr = Array.isArray(val);
          var keys = isArr ? null : Object.keys(val);
          var len = isArr ? val.length : keys.length;
          var open = isArr ? '[' : '{';
          var close = isArr ? ']' : '}';
          var label = isArr ? 'Array(' + len + ')' : 'Object';
          var startExpanded = !!state.expanded[path];
  
          var el = document.createElement('span');
  
          // collapsed row
          var collapsedRow = document.createElement('span');
          collapsedRow.className = 'jt-row';
          collapsedRow.innerHTML =
              '<span class="jt-caret">\u25B6</span> ' +
              '<span class="jt-inline">' +
              '<span class="jt-preview">' + label + ' </span>' +
              inlinePreview(val) +
              '</span>';
          el.appendChild(collapsedRow);
  
          // expanded container
          var expandedEl = document.createElement('span');
  
          var expandedHeader = document.createElement('span');
          expandedHeader.className = 'jt-row';
          expandedHeader.innerHTML =
              '<span class="jt-caret">\u25BC</span> ' +
              '<span class="jt-preview">' + label + '</span> ' +
              '<span class="jt-bracket">' + esc(open) + '</span>';
          expandedEl.appendChild(expandedHeader);
  
          var entriesEl = document.createElement('span');
          var shown = 0;
  
          function showMore() {
              var batch = Math.min(shown + PAGE_SIZE, len);
              for (var i = shown; i < batch; i++) {
                  var row = document.createElement('div');
                  row.className = 'jt-row';
                  var k = isArr ? i : keys[i];
                  var v = isArr ? val[i] : val[k];
                  var comma = i < len - 1 ? ',' : '';
                  var childPath = isArr ? path + '[' + k + ']' : path + '.' + k;
                  var keyHtml = isArr
                      ? '<span class="jt-num" title="' + esc(childPath) + '">' + k + '</span>'
                      : '<span class="jt-key" title="' + esc(childPath) + '">' + esc(String(k)) + '</span>';
                  row.innerHTML = indent(depth + 1) + keyHtml + ': ';
                  var valNode = document.createElement('span');
                  var childVal = renderValue(v, depth + 1, childPath, state);
                  if (typeof childVal === 'string') {
                      valNode.innerHTML = childVal + comma;
                  } else {
                      valNode.appendChild(childVal);
                      if (comma) {
                          var commaSpan = document.createTextNode(comma);
                          valNode.appendChild(commaSpan);
                      }
                  }
                  row.appendChild(valNode);
                  entriesEl.appendChild(row);
              }
              shown = batch;
              if (shown < len) {
                  var more = document.createElement('div');
                  more.className = 'jt-row jt-more';
                  more.innerHTML = indent(depth + 1) + '\u2026 ' + (len - shown) + ' more';
                  more.addEventListener('click', function(e) {
                      e.stopPropagation();
                      more.remove();
                      showMore();
                  });
                  entriesEl.appendChild(more);
              }
          }
  
          showMore();
          expandedEl.appendChild(entriesEl);
  
          var closingRow = document.createElement('div');
          closingRow.className = 'jt-row';
          closingRow.innerHTML = indent(depth) + '<span class="jt-bracket">' + esc(close) + '</span>';
          expandedEl.appendChild(closingRow);
  
          el.appendChild(expandedEl);
  
          // Set initial state
          var collapsed = !startExpanded;
          collapsedRow.style.display = collapsed ? '' : 'none';
          expandedEl.style.display = collapsed ? 'none' : '';
  
          function toggle(e) {
              e.stopPropagation();
              collapsed = !collapsed;
              collapsedRow.style.display = collapsed ? '' : 'none';
              expandedEl.style.display = collapsed ? 'none' : '';
              if (collapsed) {
                  delete state.expanded[path];
              } else {
                  state.expanded[path] = 1;
              }
              saveExpanded(state.key, state.expanded);
          }
          collapsedRow.style.cursor = 'pointer';
          expandedHeader.style.cursor = 'pointer';
          collapsedRow.addEventListener('click', toggle);
          expandedHeader.addEventListener('click', toggle);
  
          return el;
      }
  
      cells.forEach(function(cell, idx) {
          try {
              var raw = cell.getAttribute('data-json');
              var val = JSON.parse(raw);
              // Only build tree for objects/arrays; primitives keep flat rendering
              if (val === null || typeof val !== 'object') return;
              var key = String(idx);
              var state = { key: key, expanded: loadExpanded(key) };
              var tree = document.createElement('span');
              tree.className = 'solite-json-tree';
              var rendered = renderValue(val, 0, '$', state);
              if (typeof rendered === 'string') {
                  tree.innerHTML = rendered;
              } else {
                  tree.appendChild(rendered);
              }
              var copyBtn = document.createElement('span');
              copyBtn.className = 'jt-copy';
              copyBtn.textContent = 'Copy';
              copyBtn.addEventListener('click', function(e) {
                  e.stopPropagation();
                  navigator.clipboard.writeText(raw).then(function() {
                      copyBtn.textContent = 'Copied!';
                      setTimeout(function() { copyBtn.textContent = 'Copy'; }, 1500);
                  });
              });
              cell.innerHTML = '';
              cell.appendChild(copyBtn);
              cell.appendChild(tree);
          } catch(e) { /* keep fallback */ }
      });
  })();
  </script>
  </div>
  </div><div class="solite-describe-footer">3 rows shown</div></details><details><summary>Columns (2)</summary><table><thead><tr><th>Name</th><th>Type</th><th>Affinity</th><th>Not null</th><th>PK</th><th>Default</th><th>Flags</th></tr></thead><tbody><tr><td>id</td><td>INTEGER</td><td>INTEGER</td><td></td><td>PK</td><td></td><td></td></tr><tr><td>name</td><td>TEXT</td><td>TEXT</td><td>yes</td><td></td><td></td><td></td></tr></tbody></table></details><details><summary>Foreign keys (1)</summary><h4>Incoming</h4><table><thead><tr><th>From</th><th>To</th></tr></thead><tbody><tr><td>orders(user_id)</td><td>id</td></tr></tbody></table></details><details><summary>DDL</summary><div><style>
    td {
      text-align: right;
    }
    .solite-json-overflow {
      font-size: 0;
      color: transparent;
    }
    .solite-json-overflow::before {
      content: "...";
      font-size: 1rem;
      color: #666;
    }
    .solite-json-overflow::before::selection {
      color: transparent;
      background: transparent;
    }
  </style><pre style="font-family:monospace"><span style="color:#CBA6F7">CREATE</span><span> </span><span style="color:#CBA6F7">TABLE</span><span> </span><span style="color:#89B4FA">users</span><span style="color:#89DCEB">(</span><span style="color:#89B4FA">id</span><span> </span><span style="color:#89B4FA">integer</span><span> </span><span style="color:#CBA6F7">primary</span><span> </span><span style="color:#CBA6F7">key</span><span style="color:#89DCEB">,</span><span> </span><span style="color:#89B4FA">name</span><span> </span><span style="color:#89B4FA">text</span><span> </span><span style="color:#CBA6F7">not</span><span> </span><span style="color:#CBA6F7">null</span><span style="color:#89DCEB">)</span><span style="color:#89DCEB">;</span></pre></div></details></div>
  '''
# ---
# name: test_describe_dot_command[describe users text]
  '''
  main.users — table · 3 rows
  ┌─────┬──────┐
  │ id  │ name │
  ├─────┼──────┤
  │   1 │ a    │
  │   2 │ b    │
  │   3 │ c    │
  └─────┴──────┘
  3 rows shown
  
  Columns
    id    INTEGER  PK
    name  TEXT  NOT NULL
  
  Foreign keys
    ←  orders(user_id) → id
  
  DDL
    CREATE TABLE users(id integer primary key, name text not null);
  
  '''
# ---
# name: test_hello
  '''
  ┌───────┐
  │ 1 + 1 │
  ├───────┤
  │     2 │
  └───────┘
  1 column × 1 row
  
  '''
# ---
# name: test_hello.1
  '''
  <div class="solite-output" style="--jt-key: #89B4FA; --jt-str: #A6E3A1; --jt-num: #FAB387; --jt-bool: #EBA0AC; --jt-null: #BAC2DE; --jt-footer: #A6ADC8; --jt-text: #CDD6F4; --jt-border: #6C7086; --jt-bg: #CDD6F4;">
  <style>
  .solite-table {
      border-collapse: collapse;
      font-family: monospace;
      font-size: 14px;
  }
  .solite-table th, .solite-table td {
      border: 1px solid #6c7086;
      padding: 4px 8px;
      text-align: left;
  }
  .solite-table th {
      background-color: #313244;
      color: #cdd6f4;
      font-weight: bold;
  }
  .solite-table tr:nth-child(even) {
      background-color: #1e1e2e;
  }
  .solite-table tr:nth-child(odd) {
      background-color: #181825;
  }
  .solite-table .ellipsis-row {
      background-color: #45475a;
      text-align: center;
      color: #a6adc8;
      font-style: italic;
  }
  .solite-table .ellipsis-col {
      background-color: #45475a;
      text-align: center;
      color: #a6adc8;
  }
  .solite-footer {
      color: #a6adc8;
      font-size: 12px;
      margin-top: 4px;
  }
  .solite-json-tree {
      font-family: monospace;
      font-size: 13px;
      line-height: 1.4;
  }
  .solite-json-tree .jt-row {
      white-space: nowrap;
  }
  .solite-json-tree .jt-inline {
      display: inline-block;
      max-width: 200px;
      overflow: hidden;
      text-overflow: ellipsis;
      vertical-align: middle;
      white-space: nowrap;
  }
  .solite-json-tree .jt-caret {
      cursor: pointer;
      user-select: none;
      display: inline-block;
      width: 1em;
      text-align: center;
      color: var(--jt-footer);
  }
  .solite-json-tree .jt-caret:hover {
      color: var(--jt-text);
  }
  .solite-json-tree .jt-key {
      color: var(--jt-key);
  }
  .solite-json-tree .jt-str {
      color: var(--jt-str);
  }
  .solite-json-tree .jt-num {
      color: var(--jt-num);
  }
  .solite-json-tree .jt-bool {
      color: var(--jt-bool);
  }
  .solite-json-tree .jt-null {
      color: var(--jt-null);
      font-style: italic;
  }
  .solite-json-tree .jt-bracket {
      color: var(--jt-footer);
  }
  .solite-json-tree .jt-preview {
      color: var(--jt-footer);
  }
  .solite-json-tree .jt-indent {
      display: inline-block;
      width: 1.5em;
  }
  .solite-json-tree .jt-more {
      color: var(--jt-footer);
      cursor: pointer;
      font-style: italic;
  }
  .solite-json-tree .jt-more:hover {
      text-decoration: underline;
      color: var(--jt-text);
  }
  .solite-json-cell {
      position: relative;
      display: inline-block;
  }
  .solite-json-cell .jt-copy {
      position: absolute;
      top: 0;
      right: 0;
      background: var(--jt-bg);
      border: 1px solid var(--jt-border);
      border-radius: 3px;
      color: var(--jt-footer);
      font-size: 11px;
      padding: 1px 5px;
      cursor: pointer;
      opacity: 0;
      transition: opacity 0.15s;
      font-family: monospace;
      z-index: 1;
  }
  .solite-json-cell:hover .jt-copy {
      opacity: 1;
  }
  .solite-json-cell .jt-copy:hover {
      color: var(--jt-text);
      border-color: var(--jt-footer);
  }
  </style>
  <table class="solite-table">
  <thead><tr><th>1 + 1</th></tr></thead>
  <tbody>
  <tr><td style="text-align: right;"><span style="color: #FAB387; font-family: monospace;">2</span></td></tr>
  </tbody>
  </table>
  <div class="solite-footer">1 column × 1 row</div>
  <script>(function() {
      var container = document.currentScript.parentElement;
      var cells = container.querySelectorAll('.solite-json-cell');
      var PREVIEW_KEYS = 5;
      var PAGE_SIZE = 20;
      var MAX_STR = 120;
      var STORAGE_PREFIX = 'solite-json-';
  
      function loadExpanded(key) {
          try {
              var v = sessionStorage.getItem(STORAGE_PREFIX + key);
              return v ? JSON.parse(v) : {};
          } catch(e) { return {}; }
      }
  
      function saveExpanded(key, expanded) {
          try {
              sessionStorage.setItem(STORAGE_PREFIX + key, JSON.stringify(expanded));
          } catch(e) {}
      }
  
      function esc(s) {
          return s.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;');
      }
  
      function truncStr(s) {
          return s.length > MAX_STR ? s.slice(0, MAX_STR - 1) + '\u2026' : s;
      }
  
      function preview(val) {
          if (val === null) return '<span class="jt-null">null</span>';
          if (typeof val === 'boolean') return '<span class="jt-bool">' + val + '</span>';
          if (typeof val === 'number') return '<span class="jt-num">' + val + '</span>';
          if (typeof val === 'string') {
              var s = val.length > 40 ? val.slice(0,37) + '\u2026' : val;
              return '<span class="jt-str">"' + esc(s) + '"</span>';
          }
          if (Array.isArray(val)) return '<span class="jt-bracket">Array(' + val.length + ')</span>';
          return '<span class="jt-bracket">Object{\u2026}</span>';
      }
  
      function inlinePreview(val) {
          if (Array.isArray(val)) {
              var parts = [];
              for (var i = 0; i < Math.min(val.length, PREVIEW_KEYS); i++) parts.push(preview(val[i]));
              var s = parts.join(', ');
              if (val.length > PREVIEW_KEYS) s += ', \u2026';
              return '<span class="jt-bracket">[</span>' + s + '<span class="jt-bracket">]</span>';
          }
          if (val && typeof val === 'object') {
              var keys = Object.keys(val);
              var parts = [];
              for (var i = 0; i < Math.min(keys.length, PREVIEW_KEYS); i++) {
                  parts.push('<span class="jt-key">' + esc(keys[i]) + '</span>: ' + preview(val[keys[i]]));
              }
              var s = parts.join(', ');
              if (keys.length > PREVIEW_KEYS) s += ', \u2026';
              return '<span class="jt-bracket">{</span>' + s + '<span class="jt-bracket">}</span>';
          }
          return preview(val);
      }
  
      function renderValue(val, depth, path, state) {
          if (val === null) return '<span class="jt-null">null</span>';
          if (typeof val === 'boolean') return '<span class="jt-bool">' + val + '</span>';
          if (typeof val === 'number') return '<span class="jt-num">' + val + '</span>';
          if (typeof val === 'string') return '<span class="jt-str">"' + esc(truncStr(val)) + '"</span>';
          return buildCollapsible(val, depth, path, state);
      }
  
      function indent(depth) {
          var s = '';
          for (var i = 0; i < depth; i++) s += '<span class="jt-indent"></span>';
          return s;
      }
  
      function buildCollapsible(val, depth, path, state) {
          var isArr = Array.isArray(val);
          var keys = isArr ? null : Object.keys(val);
          var len = isArr ? val.length : keys.length;
          var open = isArr ? '[' : '{';
          var close = isArr ? ']' : '}';
          var label = isArr ? 'Array(' + len + ')' : 'Object';
          var startExpanded = !!state.expanded[path];
  
          var el = document.createElement('span');
  
          // collapsed row
          var collapsedRow = document.createElement('span');
          collapsedRow.className = 'jt-row';
          collapsedRow.innerHTML =
              '<span class="jt-caret">\u25B6</span> ' +
              '<span class="jt-inline">' +
              '<span class="jt-preview">' + label + ' </span>' +
              inlinePreview(val) +
              '</span>';
          el.appendChild(collapsedRow);
  
          // expanded container
          var expandedEl = document.createElement('span');
  
          var expandedHeader = document.createElement('span');
          expandedHeader.className = 'jt-row';
          expandedHeader.innerHTML =
              '<span class="jt-caret">\u25BC</span> ' +
              '<span class="jt-preview">' + label + '</span> ' +
              '<span class="jt-bracket">' + esc(open) + '</span>';
          expandedEl.appendChild(expandedHeader);
  
          var entriesEl = document.createElement('span');
          var shown = 0;
  
          function showMore() {
              var batch = Math.min(shown + PAGE_SIZE, len);
              for (var i = shown; i < batch; i++) {
                  var row = document.createElement('div');
                  row.className = 'jt-row';
                  var k = isArr ? i : keys[i];
                  var v = isArr ? val[i] : val[k];
                  var comma = i < len - 1 ? ',' : '';
                  var childPath = isArr ? path + '[' + k + ']' : path + '.' + k;
                  var keyHtml = isArr
                      ? '<span class="jt-num" title="' + esc(childPath) + '">' + k + '</span>'
                      : '<span class="jt-key" title="' + esc(childPath) + '">' + esc(String(k)) + '</span>';
                  row.innerHTML = indent(depth + 1) + keyHtml + ': ';
                  var valNode = document.createElement('span');
                  var childVal = renderValue(v, depth + 1, childPath, state);
                  if (typeof childVal === 'string') {
                      valNode.innerHTML = childVal + comma;
                  } else {
                      valNode.appendChild(childVal);
                      if (comma) {
                          var commaSpan = document.createTextNode(comma);
                          valNode.appendChild(commaSpan);
                      }
                  }
                  row.appendChild(valNode);
                  entriesEl.appendChild(row);
              }
              shown = batch;
              if (shown < len) {
                  var more = document.createElement('div');
                  more.className = 'jt-row jt-more';
                  more.innerHTML = indent(depth + 1) + '\u2026 ' + (len - shown) + ' more';
                  more.addEventListener('click', function(e) {
                      e.stopPropagation();
                      more.remove();
                      showMore();
                  });
                  entriesEl.appendChild(more);
              }
          }
  
          showMore();
          expandedEl.appendChild(entriesEl);
  
          var closingRow = document.createElement('div');
          closingRow.className = 'jt-row';
          closingRow.innerHTML = indent(depth) + '<span class="jt-bracket">' + esc(close) + '</span>';
          expandedEl.appendChild(closingRow);
  
          el.appendChild(expandedEl);
  
          // Set initial state
          var collapsed = !startExpanded;
          collapsedRow.style.display = collapsed ? '' : 'none';
          expandedEl.style.display = collapsed ? 'none' : '';
  
          function toggle(e) {
              e.stopPropagation();
              collapsed = !collapsed;
              collapsedRow.style.display = collapsed ? '' : 'none';
              expandedEl.style.display = collapsed ? 'none' : '';
              if (collapsed) {
                  delete state.expanded[path];
              } else {
                  state.expanded[path] = 1;
              }
              saveExpanded(state.key, state.expanded);
          }
          collapsedRow.style.cursor = 'pointer';
          expandedHeader.style.cursor = 'pointer';
          collapsedRow.addEventListener('click', toggle);
          expandedHeader.addEventListener('click', toggle);
  
          return el;
      }
  
      cells.forEach(function(cell, idx) {
          try {
              var raw = cell.getAttribute('data-json');
              var val = JSON.parse(raw);
              // Only build tree for objects/arrays; primitives keep flat rendering
              if (val === null || typeof val !== 'object') return;
              var key = String(idx);
              var state = { key: key, expanded: loadExpanded(key) };
              var tree = document.createElement('span');
              tree.className = 'solite-json-tree';
              var rendered = renderValue(val, 0, '$', state);
              if (typeof rendered === 'string') {
                  tree.innerHTML = rendered;
              } else {
                  tree.appendChild(rendered);
              }
              var copyBtn = document.createElement('span');
              copyBtn.className = 'jt-copy';
              copyBtn.textContent = 'Copy';
              copyBtn.addEventListener('click', function(e) {
                  e.stopPropagation();
                  navigator.clipboard.writeText(raw).then(function() {
                      copyBtn.textContent = 'Copied!';
                      setTimeout(function() { copyBtn.textContent = 'Copy'; }, 1500);
                  });
              });
              cell.innerHTML = '';
              cell.appendChild(copyBtn);
              cell.appendChild(tree);
          } catch(e) { /* keep fallback */ }
      });
  })();
  </script>
  </div>
  
  '''
# ---
# name: test_hello[error contents: incomplete]
  dict({
    'ename': 'SQLError',
    'evalue': '''
      error[1]: SQL logic error
        ┌─ <anonymous>:1:1
        │
      1 │ select 1 + 
        │ ^ incomplete input
      
  
    ''',
    'traceback': list([
    ]),
  })
# ---
# name: test_hello[error contents: wrong num args]
  dict({
    'ename': 'SQLError',
    'evalue': '''
      error[1]: SQL logic error
        ┌─ <anonymous>:1:8
        │
      1 │ select substr();
        │        ^^^^^^ wrong number of arguments to function substr()
      
  
    ''',
    'traceback': list([
    ]),
  })
# ---
# name: test_value_rendering[blob plain]
  '''
  ┌─────────┐
  │ x'01ff' │
  ├─────────┤
  │ Blob<2> │
  └─────────┘
  1 column × 1 row
  
  '''
# ---
# name: test_value_rendering[float plain]
  '''
  ┌─────┐
  │ 1.5 │
  ├─────┤
  │ 1.5 │
  └─────┘
  1 column × 1 row
  
  '''
# ---
# name: test_value_rendering[integer plain]
  '''
  ┌─────┐
  │  1  │
  ├─────┤
  │   1 │
  └─────┘
  1 column × 1 row
  
  '''
# ---
# name: test_value_rendering[multi-row plain]
  '''
  ┌─────────┐
  │ column1 │
  ├─────────┤
  │       1 │
  │       2 │
  │       3 │
  └─────────┘
  1 column × 3 rows
  
  '''
# ---
# name: test_value_rendering[null plain]
  '''
  ┌──────┐
  │ null │
  ├──────┤
  │      │
  └──────┘
  1 column × 1 row
  
  '''
# ---
# name: test_value_rendering[zero-rows plain]
  '''
  ┌─────┐
  │  x  │
  ├─────┤
  └─────┘
  1 column × 0 rows
  
  '''
# ---
